--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,7 +6,8 @@
 }
 
 html {
-    background-color: lightblue;
+    /* background-color: lightblue; */
+    background-color: rgba(173, 216, 230, 0.5);
 }
 
 input,
